# pclem

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  makescript.sh  pclem-config.cmake  pclem-config.cmake.in
pclem_lib/: CMakeLists.txt  pclem-config.cmake.in
pclem_lib/include/: boundingbox.h  covariance_matrix.h  ellipsoid.h  em_algorithm.h  file_exporter.h  gaussian_mixture.h  hierarchical_gaussian_mixture.h  matrix33.h  pointcloud.h  rotation.h  vector3.h  visualization.h  weighted_gaussian.h
pclem_lib/src/: associated_point.cuh  association_computing_operation.cu  association_computing_operation.h  bounding_box_creation_operation.cu  bounding_box_creation_operation.h  boundingbox.cu  boundingbox.h  covariance_matrix.cu  device_hierarchical_gaussian_mixture.cu  device_hierarchical_gaussian_mixture.h  device_point.cuh  device_pointcloud.cu  device_pointcloud.h  ellipsoid.cu  em_algorithm.cu  em_algorithm.h  file_exporter.cpp  gaussian_mixture.cu  gaussian_mixture_factory.cu  gaussian_mixture_factory.h  hierarchical_gaussian_mixture.cu  hierarchical_gaussian_mixture.h  log_likelihood_operation.cu  log_likelihood_operation.h  matrix33.cpp  mixture_creation_operation.cu  mixture_creation_operation.h  pclem_math.cpp  pclem_math.h  point_normalization_operation.cu  point_normalization_operation.h  pointcloud.cu  raw_covariance_matrix.cuh  rotation.cpp  sort_by_best_association_operation.cu  sort_by_best_association_operation.h  vector3.cpp  vector3.h  weighted_gaussian.cu  weighted_gaussian.h
pclem_lib/test/: CMakeLists.txt  run_tests.cpp  test_covariance_matrix.cpp  test_gaussian_in_visualization.cpp  test_gaussian_mixture.cpp  test_gaussian_mixture_factory.cpp  test_matrix_33.cpp  test_rotation.cpp  test_sorting_operation.cu
pclem_vtk/: CMakeLists.txt
pclem_vtk/src/: ellipsoid.h  parula_lookup_table.cpp  parula_lookup_table.h  profile.cpp  run_em.cpp  run_hierarchical_em.cpp  run_to_vtk.cpp  visualizable_gaussian_mixture.cpp  visualizable_gaussian_mixture.h  visualizable_hierarchical_gaussian_mixture.cpp  visualizable_hierarchical_gaussian_mixture.h  visualizable_point_cloud.cpp  visualizable_point_cloud.h  visualizable_weighted_gaussian.cpp  visualizable_weighted_gaussian.h  visualization.cpp  visualization.h  vtk_pointcloud_reader.cpp  vtk_pointcloud_reader.h  vtk_visualization.cpp  vtk_visualization.h
pclem_vtk/test/: run_tests.cpp  test_hierarchy.cpp  test_one_hierarchy.cpp  test_vtk_visualization.cpp
res/: foret.vtk
scripts/: hgmm_to_paraview.py
src/: PointCloud.cpp  associated_point.cuh  boundingbox.cpp  boundingbox.h  covariance_matrix.cpp  covariance_matrix.cu  covariance_matrix.cuh  covariance_matrix.h  device_hierarchical_gaussian_mixture.cu  device_hierarchical_gaussian_mixture.h  device_pointcloud.cu  device_pointcloud.h  ellipsoid.h  em_algorithm.cu  em_algorithm.h  gaussian_mixture.cu  gaussian_mixture.h  gaussian_mixture_factory.cu  gaussian_mixture_factory.h  hierarchical_gaussian_mixture.cu  likelihood_matrix.cu  likelihood_matrix.h  point.cuh  point.h  pointcloud.cu  pointcloud.h  private_gaussian_mixture.cu  private_gaussian_mixture.h  raw_covariance_matrix.cuh  raw_covariance_matrix.h  run_em.cpp  run_em.cu  strided_range.cu  strided_range.h  vector3.cpp  visualization.cu  visualization.h  weighted_gaussian.cpp  weighted_gaussian.cu  weighted_gaussian.cuh  (+1 more)
